# mongo2s3

./: Dockerfile  README.md  pyproject.toml  supervisord.conf
.github/workflows/: docker-build.yaml
scripts/: export_to_s3.py
